--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,10 +74,11 @@ body{
 .circle-tile-footer {
     display: block;
     padding: 5px;
-    color: rgba(255,255,255,0.5);
+    color: white;
     background-color: rgba(0,0,0,0.1);
     transition: all ease-in-out .3s;
     text-align: center;
+   
 }
 
 .circle-tile-footer:hover {
